--- a/angular.json
+++ b/angular.json
@@ -125,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "demo-ui"
+    }
+  },
+  "defaultProject": "demo-ui",
+  "cli": {
+    "analytics": false
+  }
 }
